rewrite wechat robot, add wework send script

--- a/conf/supervisor.conf
+++ b/conf/supervisor.conf
@@ -1,4 +1,3 @@
-[program:api]
+[program:wechat-robot]
 command = gunicorn app:app -b localhost:8000
-directory = /home/mcxiaoke/apps/api
-user = mcxiaoke
+directory = /usr/local/opt/wechat-robot
