--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,8 @@ services:
     restart: always
     ports:
       - "8001:8001"
-    #volumes:
-    #  - .:/app
+    volumes:
+     - ./tmp:/tmp
     depends_on:
       - redis
       
