--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+bottle==0.12.19
+click==8.0.1
 cryptography==3.4.6
 Flask==1.1.2
 gunicorn==20.0.4
 redis==3.5.3
-requests==2.25.1
+wechatpy==1.8.15
 WeRoBot==1.13.1
